# hypre-mini-app

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindUmpire.cmake
etc/: build_script_tmpl.sh  hypre_app.yaml
etc/summitdev/: build-cuda.sh  build-mpi.sh  build-omp.sh  build-ompoff.sh  link_working.txt
src/: CMakeCache.txt  CMakeLists.txt  GpuQualifiers.H  GpuQualifiers.h  HypreSystem.cpp  HypreSystem.h  Makefile  cmake_install.cmake  laplace_3d_weak_scaling.hpp  main.cpp  mmio.c  mmio.h  tags  utils.cpp  utils.h
src/src/: Makefile  cmake_install.cmake
